@@ -1,5 +1,12 @@
 2002-12-26  Martin Mares  <mj@ucw.cz>
 
+	* lib/header.h, lspci.c: Dump AGP3 flags and speeds.
+
+	* lib/pci.h, Makefile: Removed HAVE_OWN_HEADER_H. Always use our own header,
+	there is no reason to prefer the kernel version.
+
+	* lib/proc.c (proc_scan): Don't forget to initialize hdrtype.
+
 	* Added preliminary version of NetBSD support by Quentin Garnier
 	<netbsd@quatriemek.com>.
 
